Fixed issue with slideshow image size on smaller screens

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -298,7 +298,7 @@
 		padding: 0;
 	}
 	.column, .columns {
-		width: auto !important;
+		width: 100%;
 		float: none;
 		margin-left: 0;
 		margin-right: 0;
